file extension changed

--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@
         <h1>NEWS & EVENTS</h1>
         <div class="cards">
             <div class="card">
-                <img src="./img/dessert fest.jpg" alt="loading...">
+                <img src="./img/dessert fest.png" alt="loading...">
                 <h4>Dessert Fest</h4>
                 <Button class="secondary-btn">More Details</Button>
             </div>
             <div class="card">
-                <img src="./img/candy expo.jpg" alt="loading...">
+                <img src="./img/candy expo.png" alt="loading...">
                 <h4>Candy Expo</h4>
                 <Button class="secondary-btn">More Details</Button>
             </div>
