--- a/about.html
+++ b/about.html
@@ -9,19 +9,46 @@
 </head>
 <body>
     
-     <!-- Navbar -->
+     <!-- Navbar and Hamburger-->
 
-     <div class="nav">
-        <div class="logo"><img src="./img/Sweets Villa.png" alt=""></div>
-        <div class="links">
-            <a href="index.html" target="_blank">Home</a>
-            <a href="about.html" target="_blank">About Us</a>
-            <a href="#">Our Menu</a>
-            <a href="#">Contact Us</a>
-            <a href="sign.html" target="_blank"><button class="secondary-btn">Login</button></a>
-            <a href="sign.html" target="_blank"><button class="primary-btn">Sign In</button></a>
+    <header>
+        <div class="container"> 
+           <nav class="navbar links">
+
+              <div class="logo"><img src="./img/sweetsvilla without bg.png" alt=""></div>
+
+              <ul class="nav-menu">
+                <a href="index.html">Home</a>
+                <a href="about.html" target="_blank">About Us</a>
+                <a href="order.html" target="_blank">Our Menu</a>
+                <a href="#">Contact Us</a>
+                <a href="sign.html" target="_blank"><button class="secondary-btn">Login</button></a>
+                <a href="sign.html" target="_blank"><button class="primary-btn">Sign In</button></a>
+              </ul>
+              <div class="hamburger">
+                 <span class="bar"></span>
+                 <span class="bar"></span>
+                 <span class="bar"></span>
+              </div>
+           </nav>
         </div>
-    </div>
+     </header>  
+      
+<script>
+
+const hamburger = document.querySelector(".hamburger");
+const navMenu = document.querySelector(".nav-menu");
+
+hamburger.addEventListener("click", () => {
+  hamburger.classList.toggle("active");
+  navMenu.classList.toggle("active");
+})
+
+document.querySelectorAll(".nav-link").forEach(n => n.addEventListener("click", () => {
+  hamburger.classList.remove("active");
+  navMenu.classList.remove("active");
+}))
+    </script>
 
     <!-- About Us -->
 
@@ -29,7 +56,7 @@
         <div class="aimg"><img src="./img/sample.png" alt="loading..."></div>
         <div class="atext">
             <h3>About Us</h3>
-            <p>We are one of the finnest bakers in the Bhopal vicinity. With a very wide range of choices and the very best taste we give to our products, Sweetsvilla is your one stop destination for any bakery product. We even have products for all ages according to their likes. With that variety, we even make the products with full hygeine so that no compromises are made for your hea</p>
+            <p>We are one of the finest bakers in the Bhopal vicinity. With a very wide range of choices and the very best taste we give to our products, Sweetsvilla is your one stop destination for any bakery product. We even have products for all ages according to their likes. With that variety, we even make the products with full hygeine so that no compromises are made for your health.</p>
             <button class="secondary-btn">See More</button>
         </div>
     </div>
